# OcamlFRP

./: .ocamlformat  Gemfile  README.md  TODO.md  _config.yml  about.markdown  dune-project  dune-workspace  index.markdown  ocamlfrp.opam
_posts/: 2025-01-12-welcome-to-jekyll.markdown
article/: cmds.tex  coiterators.tex  encoding.tex  main.tex  note.md  preamble.tex  yampa.tex
documentation/: main.aux  main.fdb_latexmk  main.fls  main.tex
examples/: balls.ml  basics.ml  bouncingball.ml  collide.ml  dune  graphic.ml  guess.ml  snake.ml  stdin.ml  testref.ml
lib/: animate.ml  arrows.ml  arrows.mli  coiterator.ml  coiterator_examples.ml  dune  event.ml  event.mli  frpEngine.ml  frpEngine.mli  frpgraphics.ml  frpstdin.ml  mlgraphics.ml  notes  references.ml  sf.ml  stream.ml  stream.mli  util.ml  yampa.ml
lib/arrows/: _dune  arrow_new.ml  arrows.ml  arrows.ml.old  arrows.mli
lib/basics/: basics.ml
lib/coiterators/: _coiterator_examples.ml_  _dune  coiterators.ml  coiterators.mli
lib/references/: _dune  references.ml  references.mli
lib/std/: std.ml  std.mli
lib/testing/: sf.ml
lib/testing/coiterators/: coiterators.mli
lib/utils/: _dune  utils.ml
playground/: main.ml  notes
test/: bouncingball.ml  dune  test_ocamlfrp.ml
