(executable
 (public_name basics)
 (name basics)
 (libraries ocamlfrp fmt))

(executable
 (public_name boucingball)
 (name bouncingball)
 (libraries ocamlfrp fmt graphics unix))

 (executable
 (public_name collide)
 (name collide)
 (libraries ocamlfrp fmt graphics unix))

 (executable
 (public_name testref)
 (name testref)
 (libraries ocamlfrp fmt graphics unix))