(executable
 (public_name basics)
 (name basics)
 (libraries ocamlfrp fmt))

(executable
 (public_name bouncingball)
 (name bouncingball)
 (libraries ocamlfrp fmt graphics unix))

(executable
 (public_name collide)
 (name collide)
 (libraries ocamlfrp graphics unix))

(executable
 (public_name guess)
 (name guess)
 (libraries ocamlfrp))

(executable
 (public_name snake)
 (name snake)
 (libraries ocamlfrp graphics))